--- a/charts/vela-core/crds/standard.oam.dev_rollouttraits.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_rollouttraits.yaml
@@ -288,7 +288,7 @@ spec:
             - targetRef
             type: object
           status:
-            description: RolloutStatus defines the observed state of Rollout
+            description: RolloutStatus defines the observed state of a rollout plan
             properties:
               batchRollingState:
                 description: BatchRollingState only meaningful when the Status is rolling
@@ -322,17 +322,17 @@ spec:
                   type: object
                 type: array
               currentBatch:
-                description: The current batch the rollout is working on/blocked
+                description: The current batch the rollout is working on/blocked it starts from 0
                 format: int32
                 type: integer
+              lastAppliedPodTemplateIdentifier:
+                description: lastAppliedPodTemplateIdentifier is a string that uniquely represent the last pod template each workload type could use different ways to identify that so we cannot compare between resources We update this field only after a successful rollout
+                type: string
               rollingState:
                 description: RollingState is the Rollout State
                 type: string
-              sourceGeneration:
-                description: The source resource generation
-                type: string
               targetGeneration:
-                description: The target resource generation
+                description: NewPodTemplateIdentifier is a string that uniquely represent the new pod template each workload type could use different ways to identify that so we cannot compare between resources
                 type: string
               upgradedReadyReplicas:
                 description: UpgradedReplicas is the number of Pods upgraded by the rollout controller that have a Ready Condition.
@@ -345,8 +345,6 @@ spec:
             required:
             - currentBatch
             - rollingState
-            - sourceGeneration
-            - targetGeneration
             - upgradedReadyReplicas
             - upgradedReplicas
             type: object
