Fixed unit and 2e2 tests. Added servicemonitors and certmanager crd dependencies for tests as testdata.

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ dashboard/src/.umi-production/
 
 # Swagger: generate Restful API
 pkg/server/docs/index.html
+
+# Chart dependencies
+/charts/*/charts
