--- a/charts/vela-core/Chart.yaml
+++ b/charts/vela-core/Chart.yaml
@@ -21,7 +21,7 @@ version: 0.1.0
 appVersion: 0.1.0
 
 dependencies:
-  - name: certmanager
+  - name: cert-manager
     version: "v1.1.*"
-    repository: "https://charts.jetstack.io"
-    condition: certmanager.enabled
+    repository: https://charts.jetstack.io
+    condition: certManager.enabled
