--- a/legacy/charts/vela-core-legacy/crds/core.oam.dev_workloaddefinitions.yaml
+++ b/legacy/charts/vela-core-legacy/crds/core.oam.dev_workloaddefinitions.yaml
@@ -91,6 +91,12 @@ spec:
                   description: HealthPolicy defines the health check policy for the abstraction
                   type: string
               type: object
+            template:
+              description: Template defines the abstraction template data of the workload, it will replace the old template in extension field. the data format depends on templateType, by default it's CUE
+              type: string
+            templateType:
+              description: TemplateType defines the data format of the template, by default it's CUE format Terraform HCL, Helm Chart will also be candidates in the near future.
+              type: string
           required:
           - definitionRef
           type: object
