--- a/charts/vela-core/crds/standard.oam.dev_rollouttraits.yaml
+++ b/charts/vela-core/crds/standard.oam.dev_rollouttraits.yaml
@@ -98,7 +98,7 @@ spec:
                     description: Paused the rollout, default is false
                     type: boolean
                   rolloutBatches:
-                    description: The exact distribution among batches. mutually exclusive to NumBatches
+                    description: The exact distribution among batches. mutually exclusive to NumBatches. The total number cannot exceed the targetSize or the size of the source resource We will IGNORE the last batch's replica field if it's a percentage since round errors can lead to inaccurate sum We highly recommend to leave the last batch's replica field empty
                     items:
                       description: RolloutBatch is used to describe how the each batch rollout should be
                       properties:
@@ -200,7 +200,7 @@ spec:
                           anyOf:
                           - type: integer
                           - type: string
-                          description: 'Replicas is the number of pods to upgrade in this batch it can be an absolute number (ex: 5) or a percentage of total pods it is mutually exclusive with the PodList field'
+                          description: 'Replicas is the number of pods to upgrade in this batch it can be an absolute number (ex: 5) or a percentage of total pods we will ignore the percentage of the last batch to just fill the gap it is mutually exclusive with the PodList field'
                           x-kubernetes-int-or-string: true
                       type: object
                     type: array
@@ -208,7 +208,7 @@ spec:
                     description: RolloutStrategy defines strategies for the rollout plan
                     type: string
                   rolloutWebhooks:
-                    description: RolloutWebhooks provides a way for the rollout to interact with an external process
+                    description: RolloutWebhooks provide a way for the rollout to interact with an external process
                     items:
                       description: RolloutWebhook holds the reference to external checks used for canary analysis
                       properties:
