build with npm instead of yarn

--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -23,7 +23,4 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn
-    - run: yarn lint
-    - run: yarn build
-
+    - run: npm install
