add trait with CUE

--- a/charts/vela-core/templates/defwithtemplate/manualscale.yaml
+++ b/charts/vela-core/templates/defwithtemplate/manualscale.yaml
@@ -13,7 +13,7 @@ spec:
     name: manualscalertraits.core.oam.dev
   workloadRefPath: spec.workloadRef
   template: |
-    output: {
+    outputs: scaler: {
     	apiVersion: "core.oam.dev/v1alpha2"
     	kind:       "ManualScalerTrait"
     	spec: {
