--- a/docs/examples/registry/metrics.yaml
+++ b/docs/examples/registry/metrics.yaml
@@ -22,7 +22,7 @@ spec:
         url: https://prometheus-community.github.io/helm-charts
         version: 9.4.4
     template: |-
-      output: {
+      outputs: metrics: {
       	apiVersion: "standard.oam.dev/v1alpha1"
       	kind:       "MetricsTrait"
       	spec: {
