--- a/docs/examples/registry/rollout.yaml
+++ b/docs/examples/registry/rollout.yaml
@@ -21,7 +21,7 @@ spec:
         url: https://oam.dev/flagger/archives/
         version: 1.1.0
     template: |-
-      output: {
+      outputs: canary: {
       	apiVersion: "flagger.app/v1beta1"
       	kind:       "Canary"
       	spec: {
