--- a/charts/vela-core/templates/kubevela-controller.yaml
+++ b/charts/vela-core/templates/kubevela-controller.yaml
@@ -107,7 +107,7 @@ spec:
           args:
             - "--metrics-addr=:8080"
             - "--enable-leader-election"
-            {{ if .Values.useWebhook }}
+            {{ if .Values.admissionWebhooks.enabled }}
             - "--use-webhook=true"
             - "--webhook-port={{ .Values.webhookService.port }}"
             - "--webhook-cert-dir={{ .Values.certificate.mountPath }}"
@@ -121,7 +121,7 @@ spec:
           imagePullPolicy: {{ quote .Values.image.pullPolicy }}
           resources:
           {{- toYaml .Values.resources | nindent 12 }}
-          {{ if .Values.useWebhook }}
+          {{ if .Values.admissionWebhooks.enabled }}
           ports:
             - containerPort: {{ .Values.webhookService.port }}
               name: webhook-server
@@ -146,7 +146,7 @@ spec:
               name: tls-cert-vol
               readOnly: true
           {{ end }}
-      {{ if .Values.useWebhook }}
+      {{ if .Values.admissionWebhooks.enabled }}
       volumes:
         - name: tls-cert-vol
           secret:
