--- a/charts/vela-core/values.yaml
+++ b/charts/vela-core/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 # Valid applyOnceOnly values: true/false/on/off/force
 applyOnceOnly: "off"
-useWebhook: true
+
 # By default, don't disable any builtin capabilities
 disableCaps: ""
 image:
@@ -84,7 +84,19 @@ certificate:
   mountPath: /etc/k8s-webhook-certs
   caBundle: replace-me
 
-# enabled if cert-manager is not already installed in the cluster
-certManager:
-  enabled: false
-  installCRDs: true
+rbac:
+  create: true
+
+admissionWebhooks:
+  enabled: true
+  failurePolicy: Fail
+  patch:
+    enabled: true
+    image:
+      repository: jettech/kube-webhook-certgen
+      tag: v1.5.0
+      pullPolicy: IfNotPresent
+    affinity: { }
+    tolerations: [ ]
+  certManager:
+    enabled: false
