WIP Fixed helm chart

--- a/charts/vela-core/templates/admission-webhooks/job-patch/job-createSecret.yaml
+++ b/charts/vela-core/templates/admission-webhooks/job-patch/job-createSecret.yaml
@@ -8,8 +8,8 @@ metadata:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
   labels:
-    app: {{ template "kubevela.name" $ }}-admission-create
-{{- include "kubevela.labels" $ | indent 4 }}
+    app: {{ template "kubevela.name" . }}-admission-create
+    {{- include "kubevela.labels" . | nindent 4 }}
 spec:
   {{- if .Capabilities.APIVersions.Has "batch/v1alpha1" }}
   # Alpha feature since k8s 1.12
@@ -19,8 +19,8 @@ spec:
     metadata:
       name:  {{ template "kubevela.fullname" . }}-admission-create
       labels:
-        app: {{ template "kubevela.name" $ }}-admission-create
-{{- include "kubevela.labels" $ | indent 8 }}
+        app: {{ template "kubevela.name" . }}-admission-create
+        {{- include "kubevela.labels" . | nindent 8 }}
     spec:
       containers:
         - name: create
@@ -31,6 +31,8 @@ spec:
             - --host={{ template "kubevela.name" . }}-webhook,{{ template "kubevela.name" . }}-webhook.{{ .Release.Namespace }}.svc
             - --namespace={{ .Release.Namespace }}
             - --secret-name={{ template "kubevela.fullname" . }}-admission
+            - --key-name=tls.key
+            - --cert-name=tls.crt
       restartPolicy: OnFailure
       serviceAccountName: {{ template "kubevela.fullname" . }}-admission
       {{- with .Values.admissionWebhooks.patch.affinity }}
