--- a/charts/vela-core/templates/admission-webhooks/job-patch/job-patchWebhook.yaml
+++ b/charts/vela-core/templates/admission-webhooks/job-patch/job-patchWebhook.yaml
@@ -8,8 +8,8 @@ metadata:
     "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
   labels:
-    app: {{ template "kubevela.name" $ }}-admission-patch
-{{- include "kubevela.labels" $ | indent 4 }}
+    app: {{ template "kubevela.name" . }}-admission-patch
+    {{- include "kubevela.labels" . | nindent 4 }}
 spec:
   {{- if .Capabilities.APIVersions.Has "batch/v1alpha1" }}
   # Alpha feature since k8s 1.12
@@ -19,8 +19,8 @@ spec:
     metadata:
       name:  {{ template "kubevela.fullname" . }}-admission-patch
       labels:
-        app: {{ template "kubevela.name" $ }}-admission-patch
-{{- include "kubevela.labels" $ | indent 8 }}
+        app: {{ template "kubevela.name" . }}-admission-patch
+        {{- include "kubevela.labels" . | nindent 8 }}
     spec:
       containers:
         - name: patch
